Update jupyter example of working with generated resource definitions

--- a/examples/fhirpy.ipynb
+++ b/examples/fhirpy.ipynb
@@ -13,7 +13,7 @@
     }
    ],
    "source": [
-    "%pip install fhirpy mypy"
+    "%pip install fhirpy mypy pydantic -U"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "source": [
     "from fhirpy import SyncFHIRClient\n",
     "\n",
-    "from generated.resources import Patient\n",
+    "from generated.resources import Patient, HumanName\n",
     "\n",
     "FHIR_SERVER_API = \"<FHIR server URL>\"\n",
     "FHIR_SERVER_AUTH = \"<Bearer, Basic or other supported auth mechanism>\"\n",
@@ -67,7 +67,7 @@
    "id": "98a28fa7-f292-446e-b979-af8d6a8381b1",
    "metadata": {},
    "source": [
-    "#### Describe `Patient` resource using generated type definitions"
+    "#### Describe `HumanName` resource with the generated resource model"
    ]
   },
   {
@@ -79,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "[<SyncFHIRResource Patient/8ddefd45-7b8f-4f40-ba8c-604f5eec4884>]"
+       "[]"
       ]
      },
      "execution_count": 4,
@@ -88,9 +88,9 @@
     }
    ],
    "source": [
-    "patient = Patient(name=[{\"family\": \"Smith\", \"given\": [\"Andrew\"]}], gender=\"male\")\n",
+    "name = HumanName(family=\"Smith\", given=[\"Andrew\"])\n",
     "\n",
-    "client.resources(\"Patient\").search(name=patient[\"name\"][0][\"family\"]).fetch()"
+    "client.resources(\"Patient\").search(name=name.family).fetch()"
    ]
   },
   {
@@ -127,7 +127,7 @@
    "id": "a245185f-43dc-4d5c-ad1d-8549b5f9b48f",
    "metadata": {},
    "source": [
-    "#### Should there be any errors in the constructor arguments typecheck would fail"
+    "#### Should there be any errors in the constructor arguments both resource validation and typecheck would fail"
    ]
   },
   {
@@ -137,18 +137,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'name': [{'family': 'Smith', 'given': ['Andrew']}], 'gender': ['male']}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValidationError",
+     "evalue": "1 validation error for Patient\nname\n  value is not a valid list (type=type_error.list)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31mValidationError\u001b[0m: 1 validation error for Patient\nname\n  value is not a valid list (type=type_error.list)"
+     ]
     }
    ],
    "source": [
-    "Patient(name=[{\"family\": \"Smith\", \"given\": [\"Andrew\"]}], gender=[\"male\"])"
+    "patient = Patient(name=HumanName(family=\"Smith\", given=[\"Andrew\"]), gender=\"male\")"
    ]
   },
   {
@@ -160,7 +158,7 @@
     {
      "data": {
       "text/plain": [
-       "'<string>:10: error: Incompatible types (expression has type \"List[str]\", TypedDict item \"gender\" has type \"str\")  [typeddict-item]\\n'"
+       "'<string>:10: error: Argument \"name\" to \"Patient\" has incompatible type \"HumanName\"; expected \"Optional[List[HumanName]]\"  [arg-type]\\n'"
       ]
      },
      "execution_count": 7,
@@ -177,7 +175,7 @@
    "id": "073f57e5-09db-4122-8488-c56d73278052",
    "metadata": {},
    "source": [
-    "#### Create fhir-py resource from typed dict fields"
+    "#### Create fhir-py resource from the model"
    ]
   },
   {
@@ -187,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.resource(\"Patient\", **patient).save()"
+    "client.resource(\"Patient\", **patient.dict(exclude_none=True)).save()"
    ]
   },
   {
@@ -207,7 +205,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'given': ['Andrew'], 'family': 'Smith'}]"
+       "[HumanName(id=None, use=None, text=None, given=['Andrew'], family='Smith', prefix=None, suffix=None, period=None, extension=None)]"
       ]
      },
      "execution_count": 9,
@@ -216,8 +214,8 @@
     }
    ],
    "source": [
-    "patient: Patient = client.resources(\"Patient\").search(name=\"Smith\").first()\n",
-    "patient[\"name\"]"
+    "patient = Patient.parse_obj(client.resources(\"Patient\").search(name=\"Smith\").first())\n",
+    "patient.name"
    ]
   },
   {
