Switch back to pydantic version 1.10.17

--- a/examples/fhirpy.ipynb
+++ b/examples/fhirpy.ipynb
@@ -185,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.resource(\"Patient\", **patient.model_dump(exclude_none=True)).save()"
+    "client.resource(\"Patient\", **patient.dict(exclude_none=True)).save()"
    ]
   },
   {
@@ -214,7 +214,7 @@
     }
    ],
    "source": [
-    "patient = Patient.model_validate(client.resources(\"Patient\").search(name=\"Smith\").first())\n",
+    "patient = Patient.parse_obj(client.resources(\"Patient\").search(name=\"Smith\").first())\n",
     "patient.name"
    ]
   },
